feat(paperless): implement PaperlessClientHttp + unit tests; provide RestTemplate/ObjectMapper beans